# D64CE-addon-manager-egui

./: .gitignore  Cargo.toml  addons.yml
src/: addon.rs  checks.rs  cmdlineparse.rs  command.rs  ephraim.rs  exe.rs  main.rs
src/apps/: error.rs  mod.rs
